   - added a callback "tableSorted()" called immeditately after the table has been sorted (e.g. to update a bar or pie chart)
   - added a callback "readonlyWarning(column)" called when a cell of a non editable column has been clicked
   - added a callback "isHeaderEditable(rowIndex, columnIndex)" in order to avoid always testing rowIndex in "isEditable"
   - the callback "modelChanged" is called only when needed (i.e. when the value really changed) + the real typed value is passed to "modelChanged"
   - method getRowIndex accepts a row object as parameter + if an ID is given, the method will silently return -1 if a row with this ID doesn't exist
   - method renderGrid accepts an additional optional parameter which is the ID to give to the generated HTML table 
   - method getValueAt checks the given column + this method returns the column label if rowIndex < 0
   - method setValueAt returns the previous value
   - TextCellEditor accepts a configuration object
   
[01/08/2010] EditableGrid v1.0.9
================================

Bugfixes:
- the PHP wrapper replaces all special XML characters in column labels by the corresponding XML code (&, ', ", <, >)
- getColumnIndex first checks if the given argument is a valid column index (ie. if the argument is at the same time a valid index and a valid name, index has priority)

[xx/08/2010] EditableGrid v1.0.10
=================================

API:
- added optional parameters "bgColor", "alpha" and "gradientFill" to renderPieChart (defaults are: white / 0.5 / true)
- added optional parameters "bgColor" and "alpha" renderBarChart (defaults are: white / 0.9)
- added callback functions "tableRendered" and "chartRendered" called after a table or chart has been rendered
- callback functions can now also be set globally by updating EditableGrid.prototype

Bugfixes:
- avoid negative padding when displaying an editor inside a cell
- always apply the "number" class to numerical cells, but also to column headers